--- a/src/components/_head.html
+++ b/src/components/_head.html
@@ -4,6 +4,17 @@
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
+  <!-- Fonts Preload -->
+  <link rel="preload" href="./fonts/Commissioner-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-Medium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-Bold.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-Medium.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-Regular.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="./fonts/Commissioner-SemiBold.woff" as="font" type="font/woff" crossorigin>
+
+
   <!-- ios fix -->
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="date=no">
