--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,7 +1,56 @@
 <footer class="footer">
+  <div class="footer__circles">
+    <img src="./img/footer/circles.svg" alt="">
+    <img src="./img/footer/circles-mobile.svg" alt="">
+  </div>
+
   <div class="container">
     <div class="footer-body">
-
+      <ul class="footer-body__links">
+        <li>
+          <a href="">О компании</a>
+        </li>
+        <li>
+          <a href="">Продукция</a>
+        </li>
+        <li>
+          <a href="">Партнерам</a>
+        </li>
+        <li>
+          <a href="">Контакты</a>
+        </li>
+      </ul>
+      <div class="footer-body__info">
+        <a href="tel:+88443511770" class="footer-body__info-title">
+          8 (8443) 51-17-70
+        </a>
+        <div class="footer-body__info-text">
+          Волгоградская область, г. Волжский, ул. Пушкина 103Б
+        </div>
+        <a href="mailto:pkvityaz@bk.ru" class="footer-body__info-text">
+          pkvityaz@bk.ru
+        </a>
+        <div class="footer-body__info-title">
+          Время работы:
+        </div>
+        <div class="footer-body__info-text">
+          Пн-пт с  8:00 до 17:00
+        </div>
+        <div class="footer-body__info-text">
+          Заезд на склад  с 8:00 до 16:00
+        </div>
+      </div>
+      <div class="footer-body__col">
+        <div class="footer-body__col-logo">
+          <img src="./img/logo-light.png" alt="">
+        </div>
+        <div class="footer-body__col-cr">
+          © 2023 ООО “ПК ВИТЯЗЬ”, Все права защищены
+        </div>
+        <a href="" class="footer-body__col-policy">
+          Политика конфидициальности
+        </a>
+      </div>
     </div>
   </div>
 </footer>
