--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,7 +1,117 @@
 <header class="header">
 	<div class="container">
 		<div class="header-body">
+			<div class="header-body__logo">
+				<img src="./img/logo.png" alt="">
+			</div>
+			<div class="header-body__menu">
+				<div class="header-body__top">
+					<a href="" class="header-body__top-link">
+						<img src="./img/icons/address.svg" alt="">
+						г. Волжский, ул. Пушкина 103Б
+					</a>
+					<a href="tel:88443511770" class="header-body__top-link _tel">
+						<img src="./img/icons/phone.svg" alt="">
+						8 (8443) 51-17-70
+					</a>
+					<div class="header-body__top-lang _select">
+						<img src="./img/icons/rus.svg" alt="">
+						RU
+					</div>
+					<div class="header-body__top-lang">
+						<img src="./img/icons/usa.svg" alt="">
+						EN
+					</div>
+				</div>
+				<nav class="header-body__nav">
+					<ul>
+						<li>
+							<a href="">
+								О компании
+							</a>
+						</li>
+						<li>
+							<a href="">
+								Продукция
+							</a>
+						</li>
+						<li>
+							<a href="">
+								Партнерам
+							</a>
+						</li>
+						<li>
+							<a href="">
+								Контакты
+							</a>
+						</li>
+					</ul>
 
+					<div class="header-body__nav-search header-search__open">
+						<img src="./img/icons/search.svg" alt="">
+						<img src="./img/icons/close.svg" alt="">
+					</div>
+				</nav>
+			</div>
+		</div>
+
+		<div class="header-mobile">
+			<div class="header-mobile__logo">
+				<img src="./img/logo.png" alt="">
+			</div>
+			<div class="header-mobile__search header-search__open">
+				<img src="./img/icons/search.svg" alt="">
+				<img src="./img/icons/close.svg" alt="">
+			</div>
+			<div class="header-body__top-lang _select">
+				<img src="./img/icons/rus.svg" alt="">
+				RU
+			</div>
+			<div class="header-mobile__burger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+		<div class="header-menu">
+			<ul class="header-menu__links">
+				<li>
+					<a href="">
+						О компании
+					</a>
+				</li>
+				<li>
+					<a href="">Продукция</a>
+				</li>
+				<li>
+					<a href="">Партнерам</a>
+				</li>
+				<li>
+					<a href="">Контакты</a>
+				</li>
+			</ul>
+			<div class="header-menu__bottom">
+				<a href="tel:+88443511770" class="header-menu__bottom-tel">
+					<img src="./img/icons/phone.svg" alt="">
+					8 (8443) 51-17-70
+				</a>
+				<div class="header-menu__bottom-address">
+					<img src="./img/icons/address.svg" alt="">
+					г. Волжский, ул. Пушкина 103Б
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="header-search">
+		<div class="container">
+			<label class="header-search__input">
+				<img src="./img/icons/search-gray.svg" alt="">
+				<input type="text" placeholder="Трубы ГОСТ">
+			</label>
+			<div class="header-search__btn">
+				Найти
+			</div>
 		</div>
 	</div>
 </header>
+<div class="header__bg "></div>
