--- a/src/scss/pages/index/_about.scss
+++ b/src/scss/pages/index/_about.scss
@@ -132,6 +132,7 @@
 
     &-logo {
       position: absolute;
+      z-index: 1;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
