--- a/src/scss/pages/index/_partners.scss
+++ b/src/scss/pages/index/_partners.scss
@@ -7,6 +7,14 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  &.no_space {
+    margin: 0;
+
+    @media (max-width: 767px) {
+      margin: 15px 0 0;
+    }
+  }
+
   @media (max-width: 767px) {
     margin: 0;
     padding: 30px 0 50px;
