--- a/src/scss/pages/index/_reliably.scss
+++ b/src/scss/pages/index/_reliably.scss
@@ -10,7 +10,7 @@
   }
 
   &.production_info {
-    margin: 44px 0 0;
+    margin: 0;
 
     @media (max-width: 767px) {
       margin: 25px 0 0;
@@ -72,6 +72,14 @@
             width: calc(100% + 10px);
           }
         }
+      }
+    }
+
+    .line_card {
+      margin: 44px 0 0 !important;
+
+      @media (max-width: 767px) {
+        margin: 25px 0 0 !important;
       }
     }
   }
@@ -178,6 +186,22 @@
               margin: 0 40px 0 0;
             }
           }
+        }
+      }
+    }
+
+    .line_card {
+      margin: 0;
+
+      &:not(:first-child) {
+        margin: 44px 0 0;
+      }
+
+      @media (max-width: 767px) {
+        margin: 25px 0 0;
+
+        &:not(:first-child) {
+          margin: 40px 0 0;
         }
       }
     }
@@ -368,6 +392,191 @@
             width: calc(100% + 170px) !important;
           }
         }
+      }
+    }
+  }
+
+  .line_card {
+    margin: 40px 0 0;
+
+    @media (max-width: 767px) {
+      margin: 24px 0 0;
+    }
+
+    &:last-child {
+      margin: 135px 0 0;
+
+      @media (max-width: 767px) {
+        margin: 24px 0 0;
+      }
+    }
+  }
+}
+
+.line_card {
+  display: flex;
+
+  @media (max-width: 767px) {
+    flex-direction: column-reverse;
+
+    &._reverse {
+      .line_card__img {
+        padding: 0 0 0 20px;
+
+        &::after,
+        img {
+          clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0% 100%);
+        }
+      }
+    }
+  }
+
+  @media (min-width: 768px) {
+    &._reverse {
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+
+      .line_card {
+        &-content {
+          transform: translate(0);
+        }
+
+        &-body {
+          margin: 0 auto 0 0;
+        }
+
+        &__img {
+          padding: 0 0 0 70px;
+          transform: translate(-100%, 0);
+
+          img {
+            clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0% 100%);
+          }
+
+          &::after {
+            right: 0;
+            left: auto;
+            clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0% 100%);
+          }
+        }
+      }
+    }
+    &._active {
+      .line_card__img {
+        &::after {
+          width: 100vw;
+          clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+        }
+      }
+      .line_card-content__title {
+        color: #fff;
+      }
+      .line_card-content__text {
+        color: #e8e8e8;
+      }
+    }
+  }
+
+  &__img {
+    position: relative;
+    flex: 0 0 calc(50%);
+    padding: 0 70px 0 0;
+
+    @media (max-width: 767px) {
+      padding: 0 20px 0 0;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      clip-path: polygon(0% 0, 92% 0%, 100% 100%, 0% 100%);
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      z-index: -1;
+      left: 0;
+      top: -0.35px;
+      bottom: 0;
+      width: calc(100% - 50px);
+      background: #e0222d;
+      clip-path: polygon(0 0, 92% 0%, 100% 100%, 0% 100%);
+
+      transition: all 0.8s ease;
+
+      @media (max-width: 767px) {
+        width: calc(100% + 10px);
+      }
+
+      @media (max-width: 767px) {
+        width: calc(100%);
+      }
+    }
+  }
+
+  &-body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 0 0 auto;
+    width: 50%;
+
+    @media (max-width: 767px) {
+      width: 100%;
+      margin: 0;
+    }
+  }
+
+  &-content {
+    flex: 0 0 100%;
+    transform: translate(-50%, 0);
+
+    @media (max-width: 767px) {
+      transform: translate(0);
+      flex: 0 0 auto;
+      padding: 0 20px 40px;
+    }
+
+    .container {
+      height: 100%;
+    }
+
+    &__title {
+      color: #000;
+      font-family: Commissioner;
+      font-size: 28px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+
+      transition: all 0.4s ease 0.1s;
+
+      @media (max-width: 767px) {
+        font-size: 22px;
+        line-height: 26px;
+      }
+    }
+
+    &__text {
+      margin: 24px 0 0;
+      max-width: 500px;
+
+      color: #6f7794;
+      font-family: Commissioner;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 30px;
+
+      transition: all 0.4s ease 0.1s;
+
+      @media (max-width: 767px) {
+        font-size: 16px;
+        line-height: 26px;
       }
     }
   }
